# CyberWolf

./: .gitignore  AGENTS.md  CLAUDE.md  PLAN.md  README.en.md  README.md  prompts_copy_ready_gothic_storybook_audio.md  pyproject.toml
.cache/acestep/: progress_estimates.json
app/: __init__.py  config.py  main.py
app/configs/: 12p_pre_witch_hunter_idiot.yaml  9p_simple_seer.yaml
app/configs/prompts/: day_speech_hunter.j2  day_speech_idiot.j2  day_speech_seer.j2  day_speech_villager.j2  day_speech_witch.j2  (+13 more)
app/domain/: actions.py  config.py  context.py  events.py  roles.py  state.py
app/engine/: __init__.py  bootstrap.py  config_loader.py  event_helpers.py  graph.py  graph_viz.py  human.py  llm_bridge.py  pacing.py  reducers.py  registry.py  replay.py  rules.py  session.py  state_machine.py
app/infra/: db.py  events.py  schema.sql
app/services/: context_builder.py  decisions.py  llm.py  llm_provider.py  prompts.py  replay.py  summaries.py  tts.py
app/ui/: __init__.py  app.py  commands.py  db_view.py  i18n.py
desktop/: index.html  package-lock.json  package.json  prompts.md  prompts_copy_ready_gothic_storybook_audio.md  screenshot.mjs  screenshot_compare.mjs  screenshot_phases.mjs  tailwind.config.js  tsconfig.json  vite.config.ts  werewolf_asset_manifest_v5.json  werewolf_ui_assets_spec_v5_production_ready.md
desktop/electron/: main.js
desktop/src/: App.tsx  index.css
desktop/tests/: gameFlow.test.mjs
scripts/: compose_role_intro_asset.py  crop_portraits_to_bust.py  download_chattts.py  generate_audio_assets.py  generate_manifest_audio_assets.py  generate_manifest_visual_assets.py  generate_manifest_voice_assets.py  generate_narration_assets.py  manifest_asset_utils.py  normalize_portrait_subject_width.py  normalize_transparent_icon_assets.py  prepare_imagegen_asset.py  process_generated_portraits.py  run_game.py  run_tui.py  split_imagegen_grid.py  split_landing_roles.py
server/: api.py  music.py
tests/: test_pacing.py  test_server_flow_security.py
(+55 files in other folders)
