[project]
name = "wolf"
version = "0.1.0"
description = "AI werewolf simulator with Textual TUI and configurable LLM integration."
readme = "PLAN.md"
requires-python = ">=3.11"
dependencies = [
    "chattts>=0.2.5",
    "fastapi>=0.136.1",
    "numpy>=2.4.5",
    "pybase16384>=0.3.0,<0.3.6",
    "PyYAML>=6.0",
    "requests>=2.34.2",
    "scipy>=1.17.1",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
    "textual>=0.58.0",
    "torch>=2.12.0",
    "transformers>=5.8.1",
    "transitions>=0.9",
    "uvicorn[standard]>=0.47.0",
]

[project.scripts]
wolf-game = "app.main:main"
wolf-tui = "app.ui.commands:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["app", "server"]
